2006-10-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Correct the documentation for 
	gtk_container_remove() and gtk_widget_add_mnemonic_label() to 
	avoid mention of non-existant destroy signal and destroy() method.
	Thanks to Nickolai Dobrynin for pointing this out.

2006-10-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Correct the links to the Memory Management 
	and libglademm chapters.

2006-10-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/listviewtext.cc: get_column_title(): 
	Use "" instead of Glib::ustring() in 
	g_return_val_if_fail() to fix an odd build problem with 
	gcc 3.3.6. Bug #352226. (Thomas Zajic)

2006-10-01  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* docs/FAQ/Makefile.am:
	* docs/Makefile.am:
	* docs/Makefile_web.am_fragment:
	* docs/images/Makefile.am:
	* docs/reference/Makefile.am:
	* docs/tutorial/Makefile.am:
	* examples/Makefile.am: Upload to the new hoster instead of to sourceforge.
	Abstracted the host and path names into docs/Makefile_web.am_fragment to 
	avoid duplication.

2.10.2:

2006-09-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/book/socket/Makefile.am: remove source file dependency on a
	non-existent file.  This was part of an earlier example, but I simplified
	the example and removed this file so that it would be easier to understand,
	but forgot to remove it from the Makefile.am

2006-09-19  Johannes Schmid <jhs@gnome.org>

	* scripts/reduced.m4: Added GTKMM_ARG_ENABLE_API_ATKMM() to 
	add the --enable-api-atkmm configure option.
	* configure.in: Use GTKMM_ARG_ENABLE_API_ATKMM, and optionally 
	use the atkmm subdirectory (and its children).
	* gtk/gtkmmconfig.h.in: undef GTKMM_ATKMM_ENABLED so that 
	it will be defined (or not) in gtkmmconfig.h.
	* Makefile.am: Optinally build in the atkmm directory..
	* demos/Makefile.am:
	* demos/gtk-demo/Makefile.am:
	* examples/Makefile.am_fragment:
	* tests/Makefile.am_fragment: 