@@ -1,3 +1,9 @@
+2006-10-11  Murray Cumming  <murrayc@murrayc.com>
+
+	* gdk/src/gdk_docs_override.xml: Provide a corrected version of the 
+	Drawable::get_image() method, to avoid mentioning a function that 
+	does not exist in gtkmm. Bug #358268 from Evgeny Rippi.  
+
 2006-10-10  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_docs_override.xml: Correct the documentation for 
